dh-make-perl (0.65) UNRELEASED; urgency=low

  * in --refresh mode, overwrite the backups of the modified files under
    debian/
  * in --make mode, rename any existing debian/ directory to debian.bak/,
    overwriting the later if it exists
  * when looking for docs, ignore .svn/ too
  * do not crash when APT's package cache cannot be opened

 -- Damyan Ivanov <dmn@debian.org>  Fri, 19 Feb 2010 22:47:26 +0200

dh-make-perl (0.64) unstable; urgency=low

  [ Damyan Ivanov ]
  * DhMakePerl: drop unused extract_changelog()
  * DhMakePerl: fix_rules() replaced with update_file_list() for updating
    examples and docs and checks for deprecated/obsolete entries in
    DhMakePerl::Config
  * when finding dist version, convert "v1.002003" as "1.2.3"
  * --directory now accepts an optional directory argument
  * document that override mechanism is not used with --refresh
  * add tests for --refresh
  * when a required dependency is not found, scan WNPP for a corresponding ITP
  * do not die when WNPP can't be checked for ITPs
  * add --network option (defaults to true)
  * rewrite get_itp() as get_wnpp()
    + looks for all kinds of WNPP bugs
    + uses the lists on http://www.debian.org/devel/wnpp
  * add --source-format option (defaults to "1.0")
  * --refresh: fix pruning of binary package dependencies
    + also fix pruning of redundant perl(-base) (build-)dependencies
  * when looking for READMEs to include in .docs, skip debian/README.source
  * do not rewrite completely debian/rules if it looks like using DH7 tiny
    rules
  * drop_quilt(): remove --with=quilt from dh invocations

  [ gregor herrmann ]
  * DhMakePerl: update_file_list() allows to --refresh --only docs and
    examples separately now.

 -- gregor herrmann <gregoa@debian.org>  Fri, 19 Feb 2010 20:50:04 +0100

dh-make-perl (0.63) unstable; urgency=low

  [ Brian Cassidy ]
  * Add Array::Unique to dependencies listed in Build.PL.

  [ Damyan Ivanov ]
  * Create packages with Standards-Version: 3.8.4